# Jimao_Translator

./: .editorconfig  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/: architecture.md  constitution-compliance.md
packaging/: jimao_translator.spec
specs/001-portable-translator-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-portable-translator-core/checklists/: requirements.md
specs/001-portable-translator-core/contracts/: llm-client.md  speech-recognizer.md  translation-provider.md  tts-engine.md
src/jimao_translator/: __init__.py  config.py  exceptions.py  main.py
src/jimao_translator/llm/: client.py  context.py  service.py
src/jimao_translator/models/: chat.py  enums.py  preferences.py  translation.py  voice.py
src/jimao_translator/speech/: capture.py  orchestrator.py  recognizer.py
src/jimao_translator/storage/: history.py  preferences.py
src/jimao_translator/translation/: detection.py  provider.py  service.py
src/jimao_translator/tts/: engine.py  playback.py
src/jimao_translator/ui/: error_dialog.py  main_window.py  preferences_dialog.py
tests/contract/: test_llm_client.py  test_speech_recognizer.py  test_translation_provider.py  test_tts_engine.py
tests/integration/: test_chat_conversation.py  test_chat_tab_ui.py  test_edge_cases.py  test_history_panel_ui.py  test_history_persistence.py  test_performance.py  test_preferences_ui.py  test_text_tab_ui.py  test_text_translation_flow.py  test_voice_conversation.py  test_voice_end_to_end.py  test_voice_tab_ui.py
tests/unit/: test_error_dialog.py  test_exceptions.py
tests/unit/llm/: test_anthropic_client.py  test_context_window.py  test_qwen_client.py
tests/unit/models/: test_chat.py  test_enums.py  test_preferences.py  test_translation.py  test_voice.py
tests/unit/speech/: test_no_audio_persistence.py  test_system_stt.py
(+22 files in other folders)
